--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-express",
   "version": "1.0.0",
-  "description": "Node Express Examples",
+  "description": "Cohub",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
