--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "cohub-backend",
   "version": "1.0.0",
-  "description": "Cohub",
-  "main": "server.js",
+  "description": "Cohub", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "^4.16.4",
+    "express-session": "^1.17.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "mongoose": "^5.8.7",
+    "mongoose-currency": "^0.2.0",
+    "morgan": "~1.9.1",
+    "session-file-store": "^1.4.0"
   }
 }
