--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cohub-backend",
-  "version": "1.0.0",
-  "description": "Cohub", 
+  "name": "cohub-sujata-official",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
